# happy-little-accidents

./: README.md
HappyLittleAccidentsClient/: CMakeLists.txt  main.cpp  main.qml  qml.qrc
HappyLittleAccidentsClient/controllers/: gamemanager.cpp  gamemanager.h  messageprocesshandler.cpp  messageprocesshandler.h  websockethandler.cpp  websockethandler.h
HappyLittleAccidentsClient/ui/: DrawingPromptScreen.qml  DrawingScreen.qml  GameButton.qml  GameSelectScreen.qml  JoinLobbyScreen.qml  LobbyScreen.qml  MainMenuScreen.qml  VoteScreen.qml  WaitingForPlayersScreen.qml  WinnerScreen.qml
HappyLittleAccidentsServer/: CMakeLists.txt  gamelobbyhandler.cpp  gamelobbyhandler.h  gamemanager.cpp  gamemanager.h  main.cpp  messageprocessorhandler.cpp  messageprocessorhandler.h  websockethandler.cpp  websockethandler.h
HappyLittleAccidentsServer/libs/: uuid.cpp  uuid.h
